// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/Header renders header correctly 1`] = `
<Navbar
  className="nav-fill w-100 bg-navbar fixed-top"
  color="light"
  expand="md"
  light={true}
  tag="nav"
>
  <nav
    className="nav-fill w-100 bg-navbar fixed-top navbar navbar-expand-md navbar-light bg-light"
  >
    <Col
      className="bg-top-nav"
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="bg-top-nav col-md-2"
      >
        <nav
          className="navbar navbar-expand-md navbar-light"
        >
          <Link
            className="navbar-brand"
            to="/"
          >
            <a
              className="navbar-brand"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="OpenSRP"
                src="logo.png"
              />
            </a>
          </Link>
        </nav>
      </div>
    </Col>
    <Col
      md={8}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="col-md-8"
      />
    </Col>
    <Col
      className="bg-top-nav"
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="bg-top-nav col-md-2"
      >
        <Nav
          className="navbar navbar-expand-md center-account-text"
          tag="ul"
          vertical={false}
        >
          <ul
            className="navbar navbar-expand-md center-account-text nav"
          >
            <NavLink
              activeClassName="active"
              className="nav-link account-text"
              to="/login"
            >
              <Link
                aria-current={null}
                className="nav-link account-text"
                to="/login"
              >
                <a
                  aria-current={null}
                  className="nav-link account-text"
                  href="/login"
                  onClick={[Function]}
                >
                  Login
                </a>
              </Link>
            </NavLink>
          </ul>
        </Nav>
      </div>
    </Col>
  </nav>
</Navbar>
`;

exports[`components/page/Header renders header correctly when authenticated 1`] = `
<Navbar
  className="nav-fill w-100 bg-navbar fixed-top"
  color="light"
  expand="md"
  light={true}
  tag="nav"
>
  <nav
    className="nav-fill w-100 bg-navbar fixed-top navbar navbar-expand-md navbar-light bg-light"
  >
    <Col
      className="bg-top-nav"
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="bg-top-nav col-md-2"
      >
        <nav
          className="navbar navbar-expand-md navbar-light"
        >
          <Link
            className="navbar-brand"
            to="/"
          >
            <a
              className="navbar-brand"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="OpenSRP"
                src="logo.png"
              />
            </a>
          </Link>
        </nav>
      </div>
    </Col>
    <Col
      md={8}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="col-md-8"
      />
    </Col>
    <Col
      className="bg-top-nav"
      md={2}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <div
        className="bg-top-nav col-md-2"
      >
        <Nav
          className="navbar navbar-expand-md center-account-text"
          tag="ul"
          vertical={false}
        >
          <ul
            className="navbar navbar-expand-md center-account-text nav"
          >
            <UncontrolledDropdown
              inNavbar={true}
              nav={true}
            >
              <Dropdown
                active={false}
                addonType={false}
                direction="down"
                inNavbar={true}
                isOpen={false}
                nav={true}
                setActiveFromChild={false}
                toggle={[Function]}
              >
                <Manager>
                  <li
                    className="dropdown nav-item"
                    onKeyDown={[Function]}
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      caret={true}
                      className="account-text"
                      color="secondary"
                      nav={true}
                    >
                      <a
                        aria-expanded={false}
                        aria-haspopup={true}
                        className="account-text dropdown-toggle nav-link"
                        href="#"
                        onClick={[Function]}
                      >
                        <FontAwesomeIcon
                          border={false}
                          className=""
                          fixedWidth={false}
                          flip={null}
                          icon={
                            Array [
                              "far",
                              "user",
                            ]
                          }
                          inverse={false}
                          listItem={false}
                          mask={null}
                          pull={null}
                          pulse={false}
                          rotation={null}
                          size={null}
                          spin={false}
                          symbol={false}
                          title=""
                          transform={null}
                        >
                          <svg
                            aria-hidden="true"
                            className="svg-inline--fa fa-user fa-w-14 "
                            data-icon="user"
                            data-prefix="far"
                            focusable="false"
                            role="img"
                            style={Object {}}
                            viewBox="0 0 448 512"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
                              fill="currentColor"
                              style={Object {}}
                            />
                          </svg>
                        </FontAwesomeIcon>
                         
                        RobertBaratheon
                      </a>
                    </DropdownToggle>
                    <DropdownMenu
                      flip={true}
                      right={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu dropdown-menu-right"
                        role="menu"
                        tabIndex="-1"
                      >
                        <DropdownItem
                          tag="button"
                          toggle={true}
                        >
                          <button
                            className="dropdown-item"
                            onClick={[Function]}
                            role="menuitem"
                            tabIndex="0"
                            type="button"
                          >
                            <NavLink
                              activeClassName="active"
                              className="nav-link bg-dropdown-text"
                              to="/logout"
                            >
                              <Link
                                aria-current={null}
                                className="nav-link bg-dropdown-text"
                                to="/logout"
                              >
                                <a
                                  aria-current={null}
                                  className="nav-link bg-dropdown-text"
                                  href="/logout"
                                  onClick={[Function]}
                                >
                                  Sign Out
                                </a>
                              </Link>
                            </NavLink>
                          </button>
                        </DropdownItem>
                      </div>
                    </DropdownMenu>
                  </li>
                </Manager>
              </Dropdown>
            </UncontrolledDropdown>
          </ul>
        </Nav>
      </div>
    </Col>
  </nav>
</Navbar>
`;
